--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "git+https://github.com/fippo/sdp.git"
   },
   "scripts": {
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
     "test": "eslint sdp.js test/sdp.js && nyc --reporter html mocha test/sdp.js"
   },
   "keywords": [
@@ -18,6 +19,7 @@
   "license": "MIT",
   "devDependencies": {
     "chai": "^4.0.0",
+    "coveralls": "^2.13.1",
     "eslint": "^2.8.0",
     "mocha": "^3.4.2",
     "nyc": "^10.3.2",
