--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   },
   "scripts": {
     "build": "babel sdp.js --presets babel-preset-env --out-dir dist",
-    "coverage": "nyc report --reporter=text-lcov > coverage.lcov",
+    "coverage": "c8 report --reporter=text-lcov > coverage.lcov",
     "prepare": "npm run build",
-    "test": "eslint sdp.js test/sdp.js && nyc --reporter html mocha test/sdp.js"
+    "test": "eslint sdp.js test/sdp.js && c8 --reporter html mocha test/sdp.js"
   },
   "keywords": [
     "sdp",
@@ -25,12 +25,12 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
-    "chai": "^4.0.0",
+    "c8": "^7.12.0",
+    "chai": "^4.3.7",
     "codecov": "^3.6.5",
-    "eslint": "^6.0.1",
-    "mocha": "^10.1.0",
-    "nyc": "^14.1.1",
-    "sinon": "^2.3.2",
-    "sinon-chai": "^2.10.0"
+    "eslint": "^8.31.0",
+    "mocha": "^10.2.0",
+    "sinon": "^15.0.1",
+    "sinon-chai": "^3.7.0"
   }
 }
